SET( CFILES_OBJECT_CONFIG_GEN_PUBLIC
	${GENDIR}oyConfig_s.c
	${GENDIR}oyConfigs_s.c
	${GENDIR}oyProfile_s.c
	${GENDIR}oyProfiles_s.c
	${GENDIR}oyProfileTag_s.c
	${GENDIR}${PACKAGE_NAME}_devices.c
	${GENDIR}${PACKAGE_NAME}_devices_internal.c
	${GENDIR}${PACKAGE_NAME}_profile.c
   )
SET( CFILES_OBJECT_CONFIG_GEN_PUBLIC ${CFILES_OBJECT_CONFIG_GEN_PUBLIC} PARENT_SCOPE )
SET( CFILES_OBJECT_CONFIG_GEN
	${CFILES_OBJECT_CONFIG_GEN_PUBLIC}
	${GENDIR}oyConfig_s_.c
	${GENDIR}oyConfigs_s_.c
	${GENDIR}oyProfile_s_.c
	${GENDIR}oyProfiles_s_.c
	${GENDIR}oyProfileTag_s_.c
   )
SET( CFILES_OBJECT_CONFIG_PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_db.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_dbus.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_color.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_icc.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_texts.c
   )
SET( CFILES_OBJECT_CONFIG_PUBLIC ${CFILES_OBJECT_CONFIG_PUBLIC} PARENT_SCOPE )
IF( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
  SET( CFILES_OBJECT_CONFIG_CS ${PACKAGE_NAME}_cs.c )
ENDIF()
SET( CFILES_OBJECT_CONFIG
	${CFILES_OBJECT_CONFIG_PUBLIC}
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_check.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_io.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_widgets.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_sentinel.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}_xml.c
	${CFILES_OBJECT_CONFIG_GEN}
	${CFILES_OBJECT_CONFIG_CS}
   )
SET( CHEADERS_OBJECT_CONFIG_PUBLIC
	${GENDIR}oyConfig_s.h
	${GENDIR}oyConfigs_s.h
	${GENDIR}oyProfile_s.h
	${GENDIR}oyProfiles_s.h
	${GENDIR}oyProfileTag_s.h
	${GENDIR}${PACKAGE_NAME}_devices.h
	../include/bb_100K.h
	../include/ciexyz31_2.h
	../include/icc34.h
	../include/${PACKAGE_NAME}.h
	../include/${PACKAGE_NAME}_color.h
	../include/${PACKAGE_NAME}_icc.h
   )
SET( CHEADERS_OBJECT_CONFIG_PUBLIC ${CHEADERS_OBJECT_CONFIG_PUBLIC} PARENT_SCOPE )
SET( CHEADERS_OBJECT_CONFIG
	${GENDIR}oyConfig_s_.h
	${GENDIR}oyConfigs_s_.h
	${GENDIR}oyProfile_s_.h
	${GENDIR}oyProfiles_s_.h
	${GENDIR}oyProfileTag_s_.h
	${GENDIR}${PACKAGE_NAME}_devices_internal.h
	${CHEADERS_OBJECT_CONFIG_PUBLIC}
   )



SET( SOURCES ${CFILES_OBJECT_CONFIG} ${CHEADERS_OBJECT_CONFIG} )

IF(APPLE)
   INCLUDE_DIRECTORIES ( /Developer/Headers/FlatCarbon )
   FIND_LIBRARY( CARBON_LIBRARY Carbon )
   FIND_LIBRARY( IOKIT_LIBRARY IOKit )
   MARK_AS_ADVANCED( CARBON_LIBRARY )
   MARK_AS_ADVANCED( IOKIT_LIBRARY )
   SET(EXTRA_LIBS_CS ${CARBON_LIBRARY} ${IOKIT_LIBRARY})
ENDIF (APPLE)

SET( EXTRA_LIBS_CONFIG ${EXTRA_LIBS_MODULES} ${EXTRA_LIBS_CONFIG} ${EXTRA_LIBS_CS} )
MESSAGE( "-- EXTRA_LIBS_CONFIG:        ${EXTRA_LIBS_CONFIG}" )

IF(ENABLE_SHARED_LIBS_${PROJECT_UP_NAME})
  ADD_LIBRARY( ${PROJECT_NAME}Config SHARED ${SOURCES} )
  TARGET_LINK_LIBRARIES (
     ${PROJECT_NAME}Config
     ${PROJECT_NAME}Modules ${PROJECT_NAME}Object ${PROJECT_NAME}Core ${EXTRA_LIBS_CONFIG} )

  # OS X Framework
  SET_TARGET_PROPERTIES( ${PROJECT_NAME}Config PROPERTIES
  FRAMEWORK TRUE
  FRAMEWORK_VERSION ${OYRANOS_VERSION}
  PRIVATE_HEADER ""
  PUBLIC_HEADER "${CHEADERS_OBJECT_CONFIG_PUBLIC}"
  RESOURCE ""
#  INSTALL_NAME_DIR "@executable_path/../../../../${FRAMEWORK_DIR}"
#  DEBUG_POSTFIX -d
  )

  INSTALL( TARGETS ${PROJECT_NAME}Config
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         FRAMEWORK DESTINATION ${FRAMEWORK_DIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	 PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${TARGET_INCLUDE_FOLDER}
         )
ENDIF(ENABLE_SHARED_LIBS_${PROJECT_UP_NAME})

IF(ENABLE_STATIC_LIBS_${PROJECT_UP_NAME})
  SET( SOURCES_STATIC ${SOURCES_STATIC} ${SOURCES} PARENT_SCOPE )

  IF(NOT ENABLE_SHARED_LIBS_${PROJECT_UP_NAME})
    INSTALL( FILES ${CHEADERS_OBJECT_CONFIG_PUBLIC}
             DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${TARGET_INCLUDE_FOLDER} )
  ENDIF(NOT ENABLE_SHARED_LIBS_${PROJECT_UP_NAME})
ENDIF(ENABLE_STATIC_LIBS_${PROJECT_UP_NAME})

SET( EXTRA_LIBS_CONFIG ${EXTRA_LIBS_CONFIG} PARENT_SCOPE )
